[package]
name = "isis"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
anyhow                = "1.0.76"
byteorder             = "1.5.0"
dbus                  = "0.9.7"
hound                 = "3.5.1"
lockfree              = "0.5.1"
macroquad             = "0.4"
pulseaudio            = "0.2.1"
simple_moving_average = "1.0.2"
soundtouch            = "0.4.2"
spectrum-analyzer     = "1.6.0"
xcb                   = { version = "1.5.0", features = ["screensaver"] }

# openrgb
openrgb = "~0.1.2"
rgb = "~0.8.37"
tokio = "~1.44.2"
rand = "~0.9"

[dev-dependencies]
# openrgb
tokio-test = "~0.4.3"
